--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
               run: echo "NOW=$(date +%F)" >> $GITHUB_ENV
 
             - name: Create a release
-              uses: "dciborow/action-github-releases@latest"
+              uses: "dciborow/action-github-releases@v1.0.1"
               with:
                 repo_token: "${{ secrets.GITHUB_TOKEN }}"
                 prerelease: false
